<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_bbdd"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bbdd" />
        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_content" />
        <item
            android:id="@+id/nav_hospitales"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_hospitales" />
    </group>
</menu>