<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.covidapp_v5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_files"
        android:name="com.example.covidapp_v5.ui.ficheros.FicherosFragment"
        android:label="@string/menu_files"
        tools:layout="@layout/fragment_ficheros" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.example.covidapp_v5.ui.preferences.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/nav_bbdd"
        android:name="com.example.covidapp_v5.ui.bbdd.BbddFragment"
        android:label="@string/menu_bbdd"
        tools:layout="@layout/fragment_bbdd" />

    <fragment
        android:id="@+id/nav_content"
        android:name="com.example.covidapp_v5.ui.bbdd.BbddFragment"
        android:label="@string/menu_content"
        tools:layout="@layout/fragment_content" />
</navigation>